# othello_neural_dataset_engine

./: .env.example  .gitignore  README.md  main.py  othello.py  othello_terminal.py  pyproject.toml
.github/: pull_request_template.md
templates/: index.html
