[project]
name = "othello-neural-dataset-engine"
version = "0.1.0"
description = "A high-fidelity Othello implementation and dataset generator for training neural networks with move-by-move state snapshots and JSON export."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]
